syntax = "proto3";

package todo_v1;

import "google/protobuf/timestamp.proto";

option go_package = "ToDoAppGrpc/internal/todo_v1;todo_v1";

// Сервис для управления задачами
service TodoV1 {
  // Создание новой задачи
  rpc CreateTodo (CreateTodoRequest) returns (TodoResponse);

  // Завершение задачи по идентификатору
  rpc CompleteTodo (IdRequest) returns (TodoResponse);

  // Получение задачи по идентификатору
  rpc GetTodoById (IdRequest) returns (TodoResponse);

  // Удаление задачи по идентификатору
  rpc RemoveTodo (IdRequest) returns (InfoResponse);

  // Изменение существующей задачи
  rpc ChangeTodo (ChangeTodoRequest) returns (InfoResponse);
}

// Сообщение, представляющее задачу
message Todo {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  google.protobuf.Timestamp created_at = 5;
}

// Запрос для изменения задачи
message ChangeTodoRequest {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

// Запрос, содержащий идентификатор задачи
message IdRequest {
  int64 id = 1;
}

// Ответ с информацией
message InfoResponse {
  string message = 1;
}

// Запрос для создания новой задачи
message CreateTodoRequest {
  string title = 1;
  string description = 2;
  bool completed = 3;
}

// Ответ, содержащий информацию о задаче
message TodoResponse {
  Todo todo = 1;
}